deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperclip
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paperclip
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
